# musica

./: .gitignore  README.md  pyproject.toml
output/: Arknights Kristen Theme - Good night, Terra - full.musicxml  Arknights Kristen Theme - Good night_ Terra - Cello.musicxml
src/musica/: __init__.py  arrangement.py  cli.py  download.py  instruments.py  pipeline.py  separation.py  transcription.py
