[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musica"
version = "0.1.0"
description = "Turn any YouTube video into instrument partitures for MuseScore."
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2023.0",
    "demucs>=4.0",
    "torchcodec",
    "music21>=9.1",
    "click>=8.0",
    # basic-pitch runtime deps (basic-pitch itself must be installed via
    # 'pip install basic-pitch --no-deps' to avoid the tensorflow requirement)
    "librosa>=0.8.0",
    "mir-eval>=0.6",
    "numpy>=1.18",
    "pretty-midi>=0.2.9",
    "resampy>=0.4.3",
    "scikit-learn",
    "scipy>=1.4.1",
    "typing-extensions",
    "onnxruntime",
]

[project.scripts]
musica = "musica.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
